--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -2,22 +2,37 @@
 $arial-font-stack: Arial, sans-serif;
 $flat-blue: #2980b9;
 $background-gray: #ecf0f1;
+$header-footer-background: #464547;
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+html, 
+body {
+  height: 100%;
+}
+
 body {
   background-color: $background-gray;
 }
 
+.content-container {
+  min-height: 100%;
+  margin-bottom: -100px;
+}
+
+.push {
+  height: 100px;
+}
 .books-container {
   display: flex;
   flex-wrap: wrap;
   font-family: $arial-font-stack;
   justify-content: space-around;
-  margin: 0px auto;
+  margin: 50px auto;
   width: 70%;
 }
 
@@ -63,4 +78,10 @@ a {
   position: absolute;
   text-align: center;
   width: 120px;
+}
+
+.page-header,
+.page-footer {
+  background-color: $header-footer-background;
+  height: 100px;
 }
