--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -1,4 +1,3 @@
-
 $arial-font-stack: Arial, sans-serif;
 $flat-blue: #2980b9;
 $background-gray: #ecf0f1;
@@ -27,6 +26,21 @@ body {
 .push {
   height: 100px;
 }
+
+.selectpicker-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.selectpicker {
+  border: 1px solid $header-footer-background;
+  border-radius: 4px;
+  height: 40px;
+  padding: 10px;
+ 
+}
+
 .books-container {
   display: flex;
   flex-wrap: wrap;
@@ -85,3 +99,33 @@ a {
   background-color: $header-footer-background;
   height: 100px;
 }
+
+/*======<ngProgress>========*/
+#ngProgress {
+    margin: 0;
+    padding: 0;
+    z-index: 99998;
+    background-color: green;
+    color: green;
+    box-shadow: 0 0 10px 0; /* Inherits the font color */
+    height: 2px;
+    opacity: 0;
+
+    /* Add CSS3 styles for transition smoothing */
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+/* Styling for the ngProgress-container */
+#ngProgress-container {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99999;
+}
+/*======<ngProgress>========*/
