--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -18,9 +18,14 @@ body {
   background-color: $background-gray;
 }
 
-.content-container {
+.page-container {
   min-height: 100%;
   margin-bottom: -100px;
+}
+
+.content-container {
+  margin: 0px auto;
+  width: 70%;
 }
 
 .push {
@@ -46,8 +51,7 @@ body {
   flex-wrap: wrap;
   font-family: $arial-font-stack;
   justify-content: space-around;
-  margin: 50px auto;
-  width: 70%;
+  padding: 50px 0px 50px 0px;
 }
 
 .book {
@@ -102,30 +106,30 @@ a {
 
 /*======<ngProgress>========*/
 #ngProgress {
-    margin: 0;
-    padding: 0;
-    z-index: 99998;
-    background-color: green;
-    color: green;
-    box-shadow: 0 0 10px 0; /* Inherits the font color */
-    height: 2px;
-    opacity: 0;
+  margin: 0;
+  padding: 0;
+  z-index: 99998;
+  background-color: green;
+  color: green;
+  box-shadow: 0 0 10px 0; /* Inherits the font color */
+  height: 2px;
+  opacity: 0;
 
-    /* Add CSS3 styles for transition smoothing */
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+  /* Add CSS3 styles for transition smoothing */
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 /* Styling for the ngProgress-container */
 #ngProgress-container {
-    position: fixed;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 99999;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99999;
 }
 /*======<ngProgress>========*/
