--- a/public/templates/books.template.html
+++ b/public/templates/books.template.html
@@ -11,13 +11,14 @@
    <p>{{book.book_details[0].title}}</p>
    <p>{{book.book_details[0].contributor}} | {{book.book_details[0].publisher}}</p>
    <p class="book-description">{{book.book_details[0].description}}</p>
-   <div class="book-options-container">
-     <div class="book-options">
+   <div class="options-container">
+     <div class="options">
       <button class="options-button" 
               ng-click="addToFavorites(book.book_details[0].primary_isbn13, currentList)">
         To favorites
       </button>
-      <a class="options-button" ng-href="{{book.amazon_product_url}}">
+      
+      <a class="options-button" target="_blank" ng-href="{{book.amazon_product_url}}">
         Amazon
       </a>
      </div>
@@ -25,8 +26,8 @@
   </div> 
 </section>
 
-<a class="favorites-link" href="#!/favorites" ng-if="amountOfFavorites !== 0">
- <div class="text-wrapper">
-   {{amountOfFavorites}} favorites
- </div>
-</a>
+<button class="favorites-link" ng-if="amountOfFavorites !== 0" ng-click="goToFavorites()">
+  <div class="text-wrapper">
+   <span>{{amountOfFavorites}} favorites</span>
+  </div>
+</button>
