--- a/public/templates/favorites.template.html
+++ b/public/templates/favorites.template.html
@@ -2,7 +2,22 @@
   <div class="favorite-book" ng-repeat="book in favorites">
     <p>{{book.results[0].book_details[0].title}}</p>
     <p>{{book.results[0].book_details[0].description}}</p>
-    <button class="more-info">Show more</button>
+    
+    <div class="addition-info">
+      <p class="publish-date">Published {{book.results[0].published_date}}</p>
+      <p class="contributor">{{book.results[0].book_details[0].contributor}}</p>
+    </div>
+    
+    <div class="options-container">
+     <div class="options">
+      <button class="options-button" 
+              >
+        From favorites
+      </button>
+      <button class="options-button">
+        More info
+      </button>
+     </div>
+   </div>
   </div>
-  
 </section>  
