--- a/src/styles/partials/favorites.scss
+++ b/src/styles/partials/favorites.scss
@@ -4,7 +4,51 @@
 
 .favorite-book {
   background-color: white;
+  font-family: $arial-font-stack;
   height: 200px;
   margin-bottom: 20px;
+  overflow: hidden;
+  padding: 30px 50px 30px 50px;
+  position: relative;
+  text-align: center; 
+  
+  & > p:first-child {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+  
+  & > p:nth-child(2)  {
+    font-size: 18px;
+  }
+}
 
+.addition-info {
+  bottom: 10px;
+  position: absolute;
+  right: 35px;
+}
+
+.contributor,
+.publish-date {
+  color: $flat-light-gray;
+  font-size: 14px;
+  text-align: right;  
+}
+
+.favorite-book .options-container {
+  padding-top: 35px;
+}
+
+.favorite-book .options-button {
+  width: 150px;
+  margin: 20px auto;
+}
+
+.favorite-book:hover {
+  opacity: .7;
+}
+
+.favorite-book:hover .options-container {
+  transform: translateY(0%) scale(1);
 }
