--- a/public/templates/favorites.template.html
+++ b/public/templates/favorites.template.html
@@ -11,13 +11,17 @@
     <div class="options-container">
      <div class="options">
       <button class="options-button" 
-              >
+              ng-click="deleteFromFavorites(book.results[0].book_details[0].primary_isbn13)">
         From favorites
       </button>
-      <button class="options-button">
+      <button class="options-button" ng-click="showModalWindow(book)">
         More info
       </button>
      </div>
    </div>
   </div>
+  <modal-window-directive ng-if="isModalWindowShowed"
+                          book-data="currentBook"
+                          close-modal-window="closeModalWindow()">                        
+  </modal-window-directive>
 </section>  
