--- a/src/styles/partials/books.scss
+++ b/src/styles/partials/books.scss
@@ -108,7 +108,6 @@ a.options-button {
   transition: background-color 0.3s ease;
 }
 
-
 .favorites-link:after {
   background-color: white;
   border: 2px solid $flat-gray;
@@ -151,3 +150,7 @@ a.options-button {
   color: white;
 }
 
+.delete-favorites {
+  cursor: pointer;
+  font-size: 15px;
+}
