add CustomCookiesService specification

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -1,7 +1,7 @@
-@import '../partials/variables.scss';
-@import '../partials/books.scss';
-@import '../partials/favorites.scss';
-@import '../partials/modal-window.scss';
+@import './partials/variables.scss';
+@import './partials/books.scss';
+@import './partials/favorites.scss';
+@import './partials/modal-window.scss';
 
 * {
   box-sizing: border-box;
