--- a/src/styles/sass/partials/books.scss
+++ b/src/styles/sass/partials/books.scss
@@ -81,7 +81,7 @@ input[type=text],
 }
 
 .options-button {
-  background-color: inherit;
+  background-color: rgba(0,0,0,0.4);
   border: 2px solid white;
   border-radius: 3px;
   color: white;
