add register modal form

--- a/client/src/styles/sass/app.scss
+++ b/client/src/styles/sass/app.scss
@@ -3,6 +3,7 @@
 @import './partials/favorites.scss';
 @import './partials/modal-window.scss';
 @import './partials/progress-bar.scss';
+@import './partials/form.scss';
 
 * {
   box-sizing: border-box;
