add errors box for displaying validation errors

--- a/client/src/styles/sass/app.scss
+++ b/client/src/styles/sass/app.scss
@@ -4,6 +4,7 @@
 @import './partials/modal-window.scss';
 @import './partials/progress-bar.scss';
 @import './partials/form.scss';
+@import './partials/errors-box.scss';
 
 * {
   box-sizing: border-box;
