--- a/client/src/styles/sass/partials/books.scss
+++ b/client/src/styles/sass/partials/books.scss
@@ -4,12 +4,12 @@
   padding-top: 40px;
 }
 
-input[type=text] {
+input {
   margin-left: 20px;
   width: 311px;
 }
 
-input[type=text],
+input,
 .selectpicker {
   border: 2px solid $flat-gray;
   border-radius: 4px;
