--- a/client/public/templates/controllers/books.template.html
+++ b/client/public/templates/controllers/books.template.html
@@ -28,7 +28,9 @@
         </span>
         favorites
       </button>
-      
+      <button class="options-button" ng-click="showModalWindow(currentList, book.book_details[0].primary_isbn13)">
+          More info
+      </button>
       <a class="options-button" target="_blank" ng-href="{{book.amazon_product_url}}">
         Amazon
       </a>
@@ -45,3 +47,8 @@
    </span>
   </div>
 </div>
+
+<info-modal-window-directive ng-if="isModalWindowShowed"
+                             close-modal-window="closeModalWindow()"
+                             book-data="currentBook">
+</info-modal-window-directive>
