--- a/client/public/templates/controllers/favorites.template.html
+++ b/client/public/templates/controllers/favorites.template.html
@@ -1,27 +1,29 @@
-<section class="favorites-container">
-  <div class="favorite-book" ng-repeat="book in favorites">
-    <p>{{book.results[0].book_details[0].title}}</p>
-    <p>{{book.results[0].book_details[0].description}}</p>
-    
-    <div class="addition-info">
-      <p class="publish-date">Published {{book.results[0].published_date}}</p>
-      <p class="contributor">{{book.results[0].book_details[0].contributor}}</p>
-    </div>
-    
-    <div class="options-container">
+<section class="books-container">
+  <div class="book" ng-repeat="book in favorites | filter:query">
+   <p>{{book.results[0].book_details[0].title}}</p>
+   <p>{{book.results[0].book_details[0].contributor}} | {{book.results[0].book_details[0].publisher}}</p>
+   <p class="book-description">{{book.results[0].book_details[0].description}}</p>
+   <div class="addition-info">
+     <p class="publish-date">Published {{book.results[0].published_date}}</p>
+   </div>
+   <div class="options-container">
      <div class="options">
       <button class="options-button" 
               ng-click="deleteFromFavorites(book.results[0].book_details[0].primary_isbn13)">
         From favorites
       </button>
-      <button class="options-button" ng-click="showModalWindow(book)">
-        More info
+      <button class="options-button" ng-click="showModalWindow(book.results[0].list_name, book.results[0].book_details[0].primary_isbn13)">
+          More info
       </button>
+      <a class="options-button" target="_blank" ng-href="{{book.results[0].amazon_product_url}}">
+        Amazon
+      </a>
      </div>
    </div>
-  </div>
-  <modal-window-directive ng-if="isModalWindowShowed"
-                          book-data="currentBook"
-                          close-modal-window="closeModalWindow()">                        
-  </modal-window-directive>
-</section>  
+  </div> 
+</section>
+
+<info-modal-window-directive ng-if="isModalWindowShowed"
+                             close-modal-window="closeModalWindow()"
+                             book-data="currentBook">
+</info-modal-window-directive>
