Add some content and styles to home page

--- a/client/public/templates/main/books.template.html
+++ b/client/public/templates/main/books.template.html
@@ -43,7 +43,7 @@
   <div class="text-wrapper">
    <span ng-click="goToFavorites()">{{favorites.length}} favorites   </span>
    <span class="delete-favorites" ng-click="deleteAllFavorites();"> 
-    X
+    <i class="fa fa-times" aria-hidden="true"></i>
    </span>
   </div>
 </div>
