--- a/client/public/templates/modals/errors-box.template.html
+++ b/client/public/templates/modals/errors-box.template.html
@@ -1,7 +1,7 @@
 <div class="errors-box">
   <p class="close-errors-box">
     <span ng-click="closeErrorsBox()">
-      X
+      <i class="fa fa-times" aria-hidden="true"></i>
     </span> 
   </p>
   <p ng-repeat="error in errors">
