--- a/client/public/templates/main/favorites.template.html
+++ b/client/public/templates/main/favorites.template.html
@@ -1,3 +1,12 @@
+<nav class="navigation-container">
+  <button class="navigation-button" ng-click="goToBooks()">
+    <i class="fa fa-book" aria-hidden="true"></i> To Books
+  </button>
+  <button class="navigation-button" ng-click="logout()">
+    <i class="fa fa-sign-out" aria-hidden="true"></i>  Log out
+  </button>    
+</nav>
+
 <section class="books-container">
   <div class="book" ng-repeat="book in favorites | filter:query">
    <p>{{book.results[0].book_details[0].title}}</p>
