--- a/client/src/styles/sass/partials/home.scss
+++ b/client/src/styles/sass/partials/home.scss
@@ -56,3 +56,33 @@
 .section-title {
   text-align: center;
 }
+
+.about-container {
+  justify-content: center;
+  padding: 50px 100px 50px 100px;
+}
+
+.profile {
+  font-size: 18px;
+  margin-right: 30px;
+  text-align: center;
+
+  img {
+    border-radius: 50%;
+    height: 250px;
+    margin-bottom: 20px;
+    width: 250px;
+  }
+}
+
+.about-info {
+  font-size: 18px;
+  text-align: left;
+  width: 310px;
+
+  p:first-child {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+}
